correcting spacing for mobile format

--- a/registry/src/CSS/App.css
+++ b/registry/src/CSS/App.css
@@ -7,6 +7,8 @@
 
 .tab-header {
     text-align:center;
+    display: flex;
+    align-items: flex-end;
 }
 .tab-content {
     //margin:1rem 0;
