--- a/registry/src/CSS/tab.css
+++ b/registry/src/CSS/tab.css
@@ -1,7 +1,12 @@
 button {
 	width:25%;
 	height:3rem;
-	font-size:2rem;
+	font-size:1.5rem;
 	background-color: #FFC0CB;
 	border-radius: 2px 10px 2px 2px;
+}
+@media all and (max-width:768px) {
+	button {
+		font-size:1rem;
+	}
 }
